--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "advent_of_code_2022"
 version = "0.1.0"
 edition = "2021"
 
+default-run = "main"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -10,102 +12,107 @@ atoi = "2"
 nom = "7"
 itertools = "0.11.0"
 
-[[bin]]
-name = "day1"
-path = "src/day1.rs"
 
 [[bin]]
-name = "day2"
-path = "src/day2.rs"
+name = "main"
+path = "src/main.rs"
 
 [[bin]]
-name = "day3"
-path = "src/day3.rs"
+name = "day01"
+path = "src/bin/day01.rs"
 
 [[bin]]
-name = "day4"
-path = "src/day4.rs"
+name = "day02"
+path = "src/bin/day02.rs"
 
 [[bin]]
-name = "day5"
-path = "src/day5.rs"
+name = "day03"
+path = "src/bin/day03.rs"
 
 [[bin]]
-name = "day6"
-path = "src/day6.rs"
+name = "day04"
+path = "src/bin/day04.rs"
 
 [[bin]]
-name = "day7"
-path = "src/day7.rs"
+name = "day05"
+path = "src/bin/day05.rs"
 
 [[bin]]
-name = "day8"
-path = "src/day8.rs"
+name = "day06"
+path = "src/bin/day06.rs"
 
 [[bin]]
-name = "day9"
-path = "src/day9.rs"
+name = "day07"
+path = "src/bin/day07.rs"
+
+[[bin]]
+name = "day08"
+path = "src/bin/day08.rs"
+
+[[bin]]
+name = "day09"
+path = "src/bin/day09.rs"
 
 [[bin]]
 name = "day10"
-path = "src/day10.rs"
+path = "src/bin/day10.rs"
 
 [[bin]]
 name = "day11"
-path = "src/day11.rs"
+path = "src/bin/day11.rs"
 
 [[bin]]
 name = "day12"
-path = "src/day12.rs"
+path = "src/bin/day12.rs"
 
 [[bin]]
 name = "day13"
-path = "src/day13.rs"
+path = "src/bin/day13.rs"
 
 [[bin]]
 name = "day14"
-path = "src/day14.rs"
+path = "src/bin/day14.rs"
 
 [[bin]]
 name = "day15"
-path = "src/day15.rs"
+path = "src/bin/day15.rs"
 
 [[bin]]
 name = "day16"
-path = "src/day16.rs"
+path = "src/bin/day16.rs"
 
 [[bin]]
 name = "day17"
-path = "src/day17.rs"
+path = "src/bin/day17.rs"
 
 [[bin]]
 name = "day18"
-path = "src/day18.rs"
+path = "src/bin/day18.rs"
 
 [[bin]]
 name = "day19"
-path = "src/day19.rs"
+path = "src/bin/day19.rs"
 
 [[bin]]
 name = "day20"
-path = "src/day20.rs"
+path = "src/bin/day20.rs"
 
 [[bin]]
 name = "day21"
-path = "src/day21.rs"
+path = "src/bin/day21.rs"
 
 [[bin]]
 name = "day22"
-path = "src/day22.rs"
+path = "src/bin/day22.rs"
 
 [[bin]]
 name = "day23"
-path = "src/day23.rs"
+path = "src/bin/day23.rs"
 
 [[bin]]
 name = "day24"
-path = "src/day24.rs"
+path = "src/bin/day24.rs"
 
 [[bin]]
 name = "day25"
-path = "src/day25.rs"
+path = "src/bin/day25.rs"
