--- a/year_2023/Cargo.toml
+++ b/year_2023/Cargo.toml
@@ -31,3 +31,11 @@ path = "src/bin/day01.rs"
 [[bin]]
 name = "day02"
 path = "src/bin/day02.rs"
+
+[[bin]]
+name = "day03"
+path = "src/bin/day03.rs"
+
+[[bin]]
+name = "day04"
+path = "src/bin/day04.rs"
