add solution for 2023-day05

--- a/year_2023/Cargo.toml
+++ b/year_2023/Cargo.toml
@@ -39,3 +39,7 @@ path = "src/bin/day03.rs"
 [[bin]]
 name = "day04"
 path = "src/bin/day04.rs"
+
+[[bin]]
+name = "day05"
+path = "src/bin/day05.rs"
