--- a/year_2023/Cargo.toml
+++ b/year_2023/Cargo.toml
@@ -11,6 +11,7 @@ default-run = "main"
 atoi = "2"
 nom = "7"
 itertools = "0.12.0"
+rayon = "1.8.0"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
@@ -47,3 +48,15 @@ path = "src/bin/day05.rs"
 [[bin]]
 name = "day06"
 path = "src/bin/day06.rs"
+
+[[bin]]
+name = "day07"
+path = "src/bin/day07.rs"
+
+[[bin]]
+name = "day07_part1"
+path = "src/bin/day07_part1.rs"
+
+[[bin]]
+name = "day07_part2"
+path = "src/bin/day07_part2.rs"
